[UPD] add milestone 3-4

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -40,15 +40,15 @@
             <button class="number-button">3</button>
 
             <button class="large number-button">0</button>
-            <button class="orange">=</button>
+            <button class="orange uguale">=</button>
           </div>
 
           <div class="row operators">
-            <button class="orange">C</button>
+            <button class="orange cancel">C</button>
             <button data-operator="+" class="operator somma">+</button>
             <button data-operator="-" class="operator sottrazione">-</button>
-            <button data-operator="*" class="operator moltiplicazione">&#215;</button>
-            <button data-operator="/" class="operator divisione">&#247;</button>
+            <button data-operator="*" class="operator moltiplicazione">*</button>
+            <button data-operator="/" class="operator divisione">/</button>
             
           </div>
         </div>
